# kr-builder

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt  config.h.in  enums.h  main.cpp
lib/: 4th_dimension.h  CMakeLists.txt  enums.h  gear.cpp  gear.h  hero.cpp  hero.h  option.cpp  option.h  percentage.cpp  texture_wrapper.cpp  texture_wrapper.h
lib/calculator/: 4th_dimension.h  CMakeLists.txt  gear.cpp  gear.h  hero.cpp  hero.h  includer.h  option.cpp  percentage.cpp  percentage.h  soul_weapon.cpp  soul_weapon.h
lib/tests/: CMakeLists.txt  tests.cpp  tests.h
